name:                blackjack
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataType
                     , UI
                     , Logic
  build-depends:       base >= 4.7 && < 5
                     , brick == 0.26
                     , containers
                     , microlens
                     , microlens-th
                     , random
                     , random-shuffle
                     , split
                     , vty
  default-language:    Haskell2010

executable blackjack
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brick == 0.26
                     , containers
                     , microlens
                     , microlens-th
                     , random
                     , random-shuffle
                     , blackjack
                     , split
                     , vty
  default-language:    Haskell2010
